--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+velvet (0.7.30-1) UNRELEASED; urgency=low
+
+  * New upstream version
+
+ -- Andreas Tille <tille@debian.org>  Fri, 06 Mar 2009 14:50:52 +0100
+
 velvet (0.7.24-1) unstable; urgency=low
 
   * Initial release (Closes: #487026)
