--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,28 @@
-velvet (0.7.50-2) UNRELEASED; urgency=low
+velvet (0.7.52-1) unstable; urgency=low
 
+  * New upstream release:
+    V 0.7.51
+    - Small parsing bug
+    - Correction to the observed-insert-length script
+    - Verified strncpy calls
+    - NCBI friendly 10bp N-gaps
+    V 0.7.52
+    - Crashing bug when parsing fa.gz files
+    - Crashing bug with tiny Graph files
+    - Bug when loading FASTA files with short lines
+    - Corrected snp_view.pl script to write reverse strand reads in
+      snp_view_reads file
+    - Corrected snp_view.pl script to behave better near the edges of contigs
+    - Updated observed_insert_length to compute the standard deviation of
+      the set
+    - Corrected observed_insert_length script so that it does not crash on
+      empty libraries
+    - Crashing bug when providing an odd number of paired reads
+    - Mapping bug of reads during tour bus correction
   * Replaced the UNRELEASED tag by ‘unstable’ in debian/changelog as
     0.7.50-1 was really uploaded and accepted by the archive.
 
- -- Charles Plessy <plessy@debian.org>  Fri, 21 Aug 2009 13:19:01 +0900
+ -- Charles Plessy <plessy@debian.org>  Thu, 03 Sep 2009 20:00:54 +0900
 
 velvet (0.7.50-1) unstable; urgency=low
 
