New upstream version; ignore two minor lintian warnings for this upload but asked author about fixing the issues upstream; seems to be actively maintained so we might expext an update soon.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+velvet (0.7.55-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Andreas Tille <tille@debian.org>  Fri, 25 Sep 2009 14:52:41 +0200
+
 velvet (0.7.53-1) unstable; urgency=low
 
   * New upstream release:
