--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+velvet (0.7.61~nozlibcopy-1) unstable; urgency=low
+
+  * New upstream version
+  * debian/get-orig-source, debian/rules: Strip zlib copy from
+    upstream tarball
+
+ -- Andreas Tille <tille@debian.org>  Mon, 22 Mar 2010 15:41:53 +0100
+
 velvet (0.7.59~nozlibcopy-1) unstable; urgency=low
 
   * New upstream release
