--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+velvet (1.1.02~nozlibcopy-1) UNRELEASED; urgency=low
+
+  * New upstream version
+    upgraded patches, tweak $(LIBS) into Z_LIB_FILES variable
+    of Makefile which makes patch more robust against upstream
+    changes
+  * Debhelper 8 (control+compat)
+  * debian/rules: Leave out Z_LIB_FILES in parameter list
+  * debian/patches/meta-velvet.patch: Enable building meta-velvet
+    in contrib
+
+ -- Andreas Tille <tille@debian.org>  Tue, 05 Apr 2011 14:18:24 +0200
+
 velvet (1.0.18~nozlibcopy-1) unstable; urgency=low
 
   * New upstream version
