--- a/changelog
+++ b/changelog
@@ -6,10 +6,12 @@ velvet (1.1.02~nozlibcopy-1) UNRELEASED; urgency=low
     changes
   * Debhelper 8 (control+compat)
   * debian/rules: Leave out Z_LIB_FILES in parameter list
-  * debian/patches/meta-velvet.patch: Enable building meta-velvet
-    in contrib
+  * debian/get-orig-source: Once we are rebuilding the original
+    tarball anyway it makes sense to remove an outdated copy of
+    MetaVelvet and replace it rather by a hint to the currently
+    maintained source in README.source
 
- -- Andreas Tille <tille@debian.org>  Tue, 05 Apr 2011 14:18:24 +0200
+ -- Andreas Tille <tille@debian.org>  Fri, 15 Apr 2011 10:51:16 +0200
 
 velvet (1.0.18~nozlibcopy-1) unstable; urgency=low
 
