--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+velvet (1.1.05-1ubuntu2) lucid; urgency=low
+
+  * New upstream.  Still includes a copy of Zlib but the default
+    is now to use the system version, so removed relevant patch.
+  * Modified build to work on unmodified upstream.
+
+ -- Tim Booth <tbooth@ceh.ac.uk>  Thu, 11 Aug 2011 13:34:46 +0100
+
 velvet (1.1.02~nozlibcopy-1) unstable; urgency=low
 
   * New upstream version
