Shifted from CDBS to DH.  Confirmed that the resulting DEB is identical to the one produced before, apart from some file size difference due to switch from '-O2' to '-O3' compiler flag.  I'm not sure why the two build systems have different defaults?
The issue with MetaVelvet seems to have gone away - upstream have cleaned up the build
system a lot since Andreas was struggling with it.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-velvet (1.1.05-1ubuntu2) lucid; urgency=low
+velvet (1.1.05-1ubuntu4) lucid; urgency=low
 
+  * Moved from CDBS to DH 
   * New upstream.  Still includes a copy of Zlib but the default
     is now to use the system version, so removed relevant patch.
-  * Modified build to work on unmodified upstream.
+  * Modified build to work on unmodified upstream (still works on
+    pruned upstream).
 
  -- Tim Booth <tbooth@ceh.ac.uk>  Thu, 11 Aug 2011 13:34:46 +0100
 
