--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+velvet (1.1.05~nozlibcopy-1) UNRELEASED; urgency=low
+
+  * New upstream version
+  * debian/copyright: Revised
+  * debian/get-orig-source: Do not remove MetaVelvet
+  * debian/control:
+     Build-Depends: texlive-latex-base
+
+ -- Andreas Tille <tille@debian.org>  Fri, 12 Aug 2011 15:36:22 +0200
+
 velvet (1.1.05-1ubuntu4) lucid; urgency=low
 
   * Moved from CDBS to DH 
