--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
 velvet (1.1.05~nozlibcopy-1) UNRELEASED; urgency=low
 
+  [ Andreas Tille ]
   * New upstream version
   * debian/copyright: Revised
   * debian/get-orig-source: Do not remove MetaVelvet
   * debian/control:
      Build-Depends: texlive-latex-base
+
+  [ Charles Plessy ]
+  * Corrected VCS URLs in debian/control.
 
  -- Andreas Tille <tille@debian.org>  Fri, 12 Aug 2011 15:36:22 +0200
 
