--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 velvet (1.2.03~nozlibcopy-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Updated debian/patches/include_debians_zlib.patch.
 
  -- Charles Plessy <plessy@debian.org>  Thu, 16 Feb 2012 13:15:41 +0900
 
