--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-velvet (1.2.03~nozlibcopy-1) UNRELEASED; urgency=low
+velvet (1.2.03~nozlibcopy-1) unstable; urgency=low
 
   * New upstream release.
   * Updated debian/patches/include_debians_zlib.patch.
 
- -- Charles Plessy <plessy@debian.org>  Thu, 16 Feb 2012 13:15:41 +0900
+ -- Charles Plessy <plessy@debian.org>  Thu, 16 Feb 2012 13:37:19 +0900
 
 velvet (1.1.07~nozlibcopy-1) unstable; urgency=low
 
