--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ velvet (1.2.07+dfsg-1) UNRELEASED; urgency=low
   * debian/watch: cope with +dfsg suffix (in addition to old ~nozlibcopy)
   * debian/get-orig-source: Enable simple changing of suffix for repackaged
     source
+  * debian/control:
+     - Standards-Version: 3.9.3 (no changes needed)
 
  -- Andreas Tille <tille@debian.org>  Fri, 07 Sep 2012 14:00:49 +0200
 
