Add Files-Excluded to document what was removed from original source

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ velvet (1.2.07+dfsg-1) UNRELEASED; urgency=low
     source
   * debian/control:
      - Standards-Version: 3.9.3 (no changes needed)
+  * debian/copyright:
+    Add Files-Excluded to document what was removed from original source
 
  -- Andreas Tille <tille@debian.org>  Fri, 07 Sep 2012 14:00:49 +0200
 
