--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 velvet (1.2.07+dfsg-1) UNRELEASED; urgency=low
 
-  * New upstream version
+  * New upstream version (+adapted patch)
   * debian/watch: cope with +dfsg suffix (in addition to old ~nozlibcopy)
   * debian/get-orig-source: Enable simple changing of suffix for repackaged
     source
