--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ velvet (1.2.07+dfsg-1) UNRELEASED; urgency=low
   * rename debian/{docs,install} to debian/velvet.{docs,install} which
     is more safe in the case of multibinary package
   * debian/velvet.install: shuffle* files are in contrib directory now
+  * debhelper 9 (control+compat) to enable hardening options
+  * debian/rules: propagate hardening options
 
  -- Andreas Tille <tille@debian.org>  Fri, 07 Sep 2012 14:00:49 +0200
 
